Archive2/13/83d7fbf9846ccb/output
main.cpp: In function 'int main()':
main.cpp:52:21: error: invalid use of incomplete type 'struct TD<Tuple<double, Tuple<double> > >'
     TD<decltype(s)>();  //display new type, uncomment if you want
                     ^
main.cpp:2:29: error: declaration of 'struct TD<Tuple<double, Tuple<double> > >'
 template<typename T> struct TD;
                             ^
